# ML-in-Practice

./: .gitignore  README.md  pyproject.toml
project_materials/: Final_Report.ipynb  RandomXgbModel.ipynb  Report (1).ipynb  Report.ipynb  feature_engineering (1).ipynb  kaggle_metric.ipynb  model.ipynb  random_forest.ipynb
