[tool.poetry]
name = "TDT4173 Project"
version = "0.1.0"
description = "A project for TDT4173"
authors = [
    "Selma Helgesen Kjosnes <selmahk@stud.ntnu.no>",
    "Martin René Olderskog <martin.r.olderskog@ntnu.no>",
    "Mohamed Sadou Barry <mohamed.barry@ntnu.no>"
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
geopy = "2.4.1"
matplotlib = "3.9.2"
nbformat = "5.10.4"
numpy = "2.0.2"
pandas = "2.2.3"
plotly = "5.24.1"
scikit-learn = "1.5.2"
scipy = "1.13.1"
seaborn = "0.12.2"
xgboost = "1.7.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"